--- a/spec/vcr/google_calendar_reservations.yml
+++ b/spec/vcr/google_calendar_reservations.yml
@@ -1,34 +1,59 @@
 ---
 http_interactions:
 - request:
-    method: get
-    uri: http://127.0.0.1:50673/__identify__
+    method: post
+    uri: https://accounts.google.com/o/oauth2/token
     body:
-      encoding: US-ASCII
-      string: ''
+      encoding: ASCII-8BIT
+      string: grant_type=refresh_token&refresh_token=1%2FvNGPsDoPWxW1EJLCOOMUnUzbeAA-dpU9Y5OGxdESkHU&client_id=<GOOGLE_CLIENT_ID&client_secret=<GOOGLE_CLIENT_SECRET
     headers:
+      User-Agent:
+      - Faraday v0.9.2
+      Content-Type:
+      - application/x-www-form-urlencoded
       Accept-Encoding:
       - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
       Accept:
       - "*/*"
-      User-Agent:
-      - Ruby
   response:
     status:
-      code: 200
-      message: 'OK '
+      code: 400
+      message: Bad Request
     headers:
-      Server:
-      - WEBrick/1.3.1 (Ruby/2.3.0/2015-12-25)
+      Content-Type:
+      - application/json; charset=utf-8
+      Set-Cookie:
+      - NID=79=a90b0JUBwAKKCX707BTTu24-EcIB2sY50BJnMAJB0jGaWjpz6iXN-srJ_e3QSWivc0dos5iJBrWJ464Qe17pwfNc6CaeuIijJW_8CrSXSECZEoWQ6QLVgi6442rb0gLH;Domain=.google.com;Path=/;Expires=Tue,
+        08-Nov-2016 18:04:34 GMT;HttpOnly
+      P3p:
+      - CP="This is not a P3P policy! See https://support.google.com/accounts/answer/151657?hl=en
+        for more info."
       Date:
-      - Fri, 25 Mar 2016 19:57:09 GMT
-      Content-Length:
-      - '14'
-      Connection:
-      - Keep-Alive
+      - Mon, 09 May 2016 18:04:34 GMT
+      Expires:
+      - Mon, 09 May 2016 18:04:34 GMT
+      Cache-Control:
+      - private, max-age=0
+      X-Content-Type-Options:
+      - nosniff
+      X-Frame-Options:
+      - SAMEORIGIN
+      X-Xss-Protection:
+      - 1; mode=block
+      Server:
+      - GSE
+      Alternate-Protocol:
+      - 443:quic
+      Alt-Svc:
+      - quic=":443"; ma=2592000; v="33,32,31,30,29,28,27,26,25"
+      Transfer-Encoding:
+      - chunked
     body:
-      encoding: UTF-8
-      string: '70168921084620'
+      encoding: ASCII-8BIT
+      string: |-
+        {
+          "error" : "invalid_grant"
+        }
     http_version: 
-  recorded_at: Fri, 25 Mar 2016 19:57:09 GMT
+  recorded_at: Mon, 09 May 2016 18:04:34 GMT
 recorded_with: VCR 3.0.1
